fix: add to slider nowrap

--- a/shelter/sass/components/_friends.scss
+++ b/shelter/sass/components/_friends.scss
@@ -49,7 +49,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap:nowrap;
     width: 100%;
     @include media-tablet {
         max-width: 580px;
